# qsearch

./: .gitignore  README.md  pyproject.toml  railpack.json  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json  scrapy.cfg
backend/src/qsearch/: __init__.py  cache.py  config.py  mcp_server.py
backend/src/qsearch/api/: auth.py  federation.py  main.py  routes_v1.py
backend/src/qsearch/core/: __init__.py  constants.py  encoding.py  geometry.py
backend/src/qsearch/crawler/: items.py
backend/src/qsearch/crawler/spiders/: __init__.py  geometric_spider.py
backend/src/qsearch/index/: basin_index.py  storage.py
backend/src/qsearch/search/: hybrid.py  learner.py  orchestrator.py  serper.py
backend/tests/: test_geometry.py  test_smoke.py
docs/: KERNEL_MESH_ARCHITECTURE.md
src/qsearch/: __init__.py  cache.py  config.py
src/qsearch/api/: auth.py  deps.py  main.py  routes_v1.py
src/qsearch/core/: __init__.py  constants.py  metrics.py
src/qsearch/crawler/: __init__.py  pipelines.py  settings.py
src/qsearch/crawler/spiders/: geometric_spider.py
src/qsearch/index/: __init__.py  models.py  storage.py
src/qsearch/search/: __init__.py  orchestrator.py
src/qsearch/web/: index.html
webapp/: .dockerignore  Dockerfile  index.html  package.json  railpack.json  railway.json  tailwind.config.ts
webapp/src/: globals.css  main.tsx  theme.css  vite-env.d.ts
webapp/src/contexts/: AuthContext.tsx  ThemeProvider.tsx
webapp/src/ui/: App.tsx  Federation.tsx  LoginModal.tsx  UserMenu.tsx
webapp/src/utils/: api.ts
